deploy/kubernetes/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-ui
  namespace: ryuki-platform
  labels:
    app.kubernetes.io/part-of: ryuki-infrastructure-platform
    app.kubernetes.io/name: portal-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: ryuki-infrastructure-platform
    app.kubernetes.io/name: portal-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: platform-api
  namespace: ryuki-platform
  labels:
    app.kubernetes.io/part-of: ryuki-infrastructure-platform
    app.kubernetes.io/name: platform-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: ryuki-infrastructure-platform
    app.kubernetes.io/name: platform-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
